# frut_interp

./: Cargo.toml  README.md
examples/: frut.ft
src/: interpreter.rs  lib.rs  main.rs
