[package]
name = "frut_interp"
version = "0.0.3"
edition = "2021"
authors = ["BenimFurka"]
description = "A command-line interpreter for the Frut programming language"
license = "Apache-2.0"
repository = "https://github.com/BenimFurka/frut_interp"
keywords = ["interpreter", "programming-language", "frut"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "frut"
path = "src/main.rs"
doc = false

[dependencies]
colored = "2.0"
frut_lib = { version = "0.0.3", features = ["std"] }
frut_std = "0.0.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
